--- a/styles/global.css
+++ b/styles/global.css
@@ -11,17 +11,39 @@
 @import "custom.css";
 @import "style.css"; 
 
+.getting-started#get_started {
+    margin: 40px 0px;
+}
+
+.packages-table thead tr div{
+    font-size: 1.2rem;
+    color: #172B4D, 100% !important;
+}
+
+.packages-table thead tr .benefits-heading{
+    font-size: 1.2rem;
+}
+
+.packages-table thead tr .basic-col, .packages-table tbody tr .basic-col{
+    background-color: #F4F5F7;
+}
+
+.packages-table thead tr div small{
+    font-size: .6rem;
+}
+
+.packages-table tbody tr .service-name{
+    color: #172B4D, 100%;
+    font-size: .8rem;
+}
+
 
 .about-header{
     background-image: url(/img/blog/blog1.jpeg);
 }
 
 .mission-vision {
-<<<<<<< HEAD
-    min-height: 300px;
-=======
     height: 300px;
->>>>>>> 4462a7e4bff367d91a77b4d478b561b3de920668
     border: 1px solid #B3D4FF;
     border-radius: 20px;
     width: 70vw;
