--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@ body, html {
 
   }
 
+  .row {
+    max-width: 100vw !important;
+  }
+
   a.button {
     display: inline-flex;
     flex-direction: column;
