--- a/styles/global.css
+++ b/styles/global.css
@@ -159,6 +159,7 @@ p, h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     align-items: center;
     padding: 0px 20px;
+    margin: 15px 0px;
     border-top: 2px solid #6B778C, 100%;
 }
 
