--- a/styles/style.css
+++ b/styles/style.css
@@ -331,8 +331,19 @@ body, html {
     border: 3px solid #fff;
     width: 163px;
     height: 60px;
+    font-weight: bold;
+
   }
   
+  .sign-in {
+    border: 3px solid #fff;
+    width: 163px;
+    height: 60px;
+    color: #000;
+    font-weight: bold;
+    background-color: #fff;
+  }
+
   .packages {
     width: 100%;
   }
@@ -647,3 +658,9 @@ body, html {
     
   }
   
+  .hr-rule{
+    border-bottom: 1px solid #6b6a6a;
+  }
+  .sign-in:hover{
+    color: #000;
+  }
